# scap-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
src/scap/: __init__.py  data.py  logging.py  model_builder.py  train.py  trainer.py  utils.py  writer.py
src/scap/cli/: __init__.py  _cli_configs.py  _entrypoint.py  _parse_layers.py  _parse_tasks.py
src/scap/configs/: __init__.py  _base.py  _experiment.py  _torch.py
src/scap/layers/: __init__.py  _attention.py  _mlp.py  _registry.py
src/scap/model/: __init__.py  _base.py  _transformer.py
src/scap/tasks/: __init__.py  _registry.py
src/scap/tasks/functions/: __init__.py  _benchmarks.py  _boolean.py  _common.py  _model.py  _regression.py
src/scap/tasks/recall/: __init__.py  _benchmarks.py  _model.py  _mqar.py
